27_matrix_input/grade.txt
Grading at Mon Jul 20 12:04:02 UTC 2020
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:46:10: error: passing argument 1 of ‘rotate’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   rotate(f);
          ^
rotateMatrix.c:4:6: note: expected ‘char (*)[10]’ but argument is of type ‘FILE * {aka struct _IO_FILE *}’
 void rotate(char matrix[10][10])
      ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
